# liputenpo.org

./: .eleventy.js  .gitignore  .markdownlint.json  README.md  ala.hbs  astro.config.mjs  eleventy.config.js  index.hbs  index.html  index.md  lipu-ante.hbs  lipu.hbs  lipu.html  lipu.md  nanpa-xxx.hbs  package-lock.json  package.json  pdfs.hbs  redirect.hbs  redirects.html  sitemap.hbs  sona.hbs  tailwind.config.js
.github/ISSUE_TEMPLATE/: new-issue-release.md
_data/: jan_pali.yaml  linluwi.yaml  lipu.yaml  lipu_ale.yaml  lipu_ante.yaml  nimi-pi-pu-ala.yaml  redirects.yaml  sona.yaml
_includes/: base.html.mustache  base.html.njk  frame.html.mustache  frame.html.njk  page.hbs  page.html.njk  toki.hbs
content/scribus/: 0022sin-2.sla  (+43 more)
files/: issues_email_template.txt
lipu/: feed.hbs  lipu.hbs
public/: stylesheet-index.css  stylesheet-lipu-ante.css  stylesheet-lipu.css  stylesheet-sona.css  stylesheet-toki-wan.css  stylesheet-toki.css  stylesheet.css
scripts/: .gitignore  .pdm-python  README.md  add_seme_li_mi_solution.py  credits.py  download_lipu.sh  get_all_urls.sh  particles.py  pdf_extract_cover.py  print_bwpf_pdf.py  print_two_page_pdf.py  pyproject.toml  register.py  release_differences.py  scribus_export.sh
scripts/unused/: release_differences.py  scribus_export_ALL.sh
src/: atom.ts  content.config.ts  utils.ts
tailwind/: tailwind.css
toki/: alasa-nimi-ma-asija.md  feed.hbs  index.hbs  jan-pi-lon-ala.md  nasin-tawa-intawe.md  seme-li-mi-4.md  tawa-pi-poki-monsipi-ma-asija-nanpa-luka-luka-tu-tu-ma-tawan-en-ma-anku.md  toki.11tydata.json  toki.hbs
(+1364 files in other folders)
